2010-08-04  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15357: pagemodule preview data limit should be configurable 

2010-08-03  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #14140: TemplaVoila should use sprite icons / pt.3
	* Follow-up to: #15217: new content wizard should use docHeader

2010-07-30  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #14590: use pagerenderer to output / integrate the header parts into the regular TYPO3 output
	* Fixed issue: #15314: TYPO3 4.4 Version-selector doesn't fit into the current layout
	* Fixed issue: #15276: tv page module title bar layout breaks, if too little space 

2010-07-29  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to: #14140: TemplaVoila should use sprite icons / pt.2
	* Fixed issue: #15293: enableDragDrop setting should be set by default
	* Fixed issue: #15267: page icon is missing 

2010-07-28  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #14641: TemplaVoila Page Module: Contextual menu disappears when mouse is over with Firefox 3.6
	* Fixed bug: #13171: cm1::findingStorageFolderIds does not consider tx_templavoila.storagePid
	* Follow-up to: #14694: FlashMessage should be used instead of individual message formats
	* Fixed bug: #15266: mod2 "Template Files" uses wrong list-header styling 

2010-07-25  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #15235: default preview container misses closing strong-tag 
	* Fixed bug: #14881: Mapping elements with multiple classes results in error: No placeholder found for path... 
	* Fixed bug: #15234: Exception in tceform if datastructure not found 
	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.3
	* Fixed issue: #15233: TV should support mod.web_list.newContentWiz.overrideWithExtension 
	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - hidden elements adjustments

2010-07-24  Tolleiv Nietsch <nietsch@aoemedia.de>
